--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.30)
 project(SinnersC)
 
-# enable_testing()
+
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+enable_testing()
 
 add_executable ( gng src/main.cpp )
 
