--- a/c-moon.cabal
+++ b/c-moon.cabal
@@ -19,7 +19,7 @@ common warnings
 
 library
     import:           warnings
-    exposed-modules:  MyLib
+    exposed-modules:  Parser
     -- other-modules:
     -- other-extensions:
     build-depends:    base ^>=4.17.2.1
