add parser test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,14 @@ add_library(lexer_lib
     src/lexer/token.cpp
 )
 
+# Library for parser
+add_library(parser_lib
+    src/utils/errors/errors.cpp
+    src/lexer/lexer.cpp
+    src/lexer/token.cpp
+    src/parser/ast.cpp
+    src/parser/parser.cpp)
+
 # Main executable
 add_executable(cm ${SRC_FILES})
 
@@ -32,8 +40,16 @@ if (BUILD_TESTING)
     add_executable(lexer_test_failure tests/lexer/test_failure.cpp)
     target_link_libraries(lexer_test_failure lexer_lib)
 
+    add_executable(parser_test_success tests/parser/test_success.cpp)
+    target_link_libraries(parser_test_success parser_lib)
+
+    add_executable(parser_test_failure tests/parser/test_failure.cpp)
+    target_link_libraries(parser_test_failure parser_lib)
+
     add_test(NAME lexer_success COMMAND lexer_test_success)
     add_test(NAME lexer_failure COMMAND lexer_test_failure)
+    add_test(NAME parser_success COMMAND parser_test_success)
+    add_test(NAME parser_failure COMMAND parser_test_failure)
 endif()
 
 # C++ standard
